2007-02-12  Stefan Kost  <ensonic@users.sf.net>

	* gst/goom/gstgoom.c: (gst_goom_class_init), (gst_goom_init),
	(gst_goom_change_state):
	* gst/goom/gstgoom.h:
	  Improved docs and use GST_DEBUG_FUNCPTR.

	* gst/level/gstlevel.c: (gst_level_class_init):
	  Use GST_DEBUG_FUNCPTR.

	* gst/monoscope/gstmonoscope.c: (gst_monoscope_init),
	(gst_monoscope_chain), (gst_monoscope_change_state):
	  Improved docs source cleanups.

2007-02-12  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/debug/Makefile.am:
	* gst/debug/gstdebug.c: (plugin_init):
	* gst/debug/gstpushfilesrc.c:
	* gst/debug/gstpushfilesrc.h:
	  Add code for a pushfilesrc element that implements a pushfile:// URI
	  handler, to make debugging push-mode operation of demuxer/decoders
	  that support both easier in connection with seek/playbin/etc.
	  The element isn't registered at the moment.

2007-02-11  Sébastien Moutte  <sebastien@moutte.net>

	* gst/avi/gstavimux.c:
	  Comment a #if 0 in caps template definition as VS6 seems to 
	do not support it.
	* gst/rtsp/gstrtspsrc.c:(gst_rtspsrc_loop_udp):
	  Use gst_guint64_to_gdouble for conversion.
	* gst/rtsp/rtspconnection.c:(rtsp_connection_send):
	  Move variables declaration before the first instruction.
	* gst/rtsp/rtspdefs.c:(rtsp_strresult):
	  Don't use hstrerror for error log on G_OS_WIN32 build as it's not supported.
	  And don't include netdb.h for G_OS_WIN32
	* gst/rtsp/sdpmessage.c:(sdp_parse_line):
	  This initialization SDPMedia nmedia = {.media = NULL }; is not supported
	  by VS6 then use an other way to initialize SDPMedia structure.
	* gst/udp/gstdynudpsink.h:
	* gst/udp/gstdynudpnetutils.h:
	  Do not include <sys/time.h> for G_OS_WIN32
	* gst/udp/gstudpsrc.c:
	  Define socklen_t as int for G_OS_WIN32
	* win/common/config.h.in:
	  Undef HAVE_NETINET_IN_H
	* win32/vs6/gst_plugins_good.dsw:
	* win32/vs6/libgstrtp.dsp:
	* win32/vs6/libgstrtsp.dsp:
	* win32/vs6/libgstautogen.dsp:
	* win32/vs6/libgstaudiofx.dsp: