@@ -1,5 +1,14 @@
 2007-02-12  Stefan Kost  <ensonic@users.sf.net>
 
+	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_v4l2fourcc_to_caps),
+	(gst_v4l2src_get_caps):
+	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_fill_format_list),
+	(gst_v4l2src_grab_frame), (gst_v4l2src_set_capture),
+	(gst_v4l2src_capture_init):
+	  More FIXME comments and messaging changes.
+
+2007-02-12  Stefan Kost  <ensonic@users.sf.net>
+
 	* gst/goom/gstgoom.c: (gst_goom_class_init), (gst_goom_init),
 	(gst_goom_change_state):
 	* gst/goom/gstgoom.h:
